--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,13 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.commons.csv</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>com.hermit-reasoner</groupId>
             <artifactId>org.semanticweb.hermit</artifactId>
             <version>1.3.8.4</version>
