--- a/pom.xml
+++ b/pom.xml
@@ -172,13 +172,11 @@
             <version>1.7</version>
         </dependency>
 
-
         <dependency>
             <groupId>com.hermit-reasoner</groupId>
             <artifactId>org.semanticweb.hermit</artifactId>
             <version>1.3.8.4</version>
         </dependency>
-
 
         <dependency>
             <groupId>org.xerial</groupId>
@@ -190,6 +188,18 @@
             <groupId>org.mapdb</groupId>
             <artifactId>mapdb</artifactId>
             <version>3.0.7</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.semanticweb.yars</groupId>
+            <artifactId>nxparser-parsers</artifactId>
+            <version>2.3.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.rdfhdt</groupId>
+            <artifactId>hdt-java-core</artifactId>
+            <version>2.1.1-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
