--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,11 @@
                 </executions>
             </plugin>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M4</version>
+            </plugin>
 
             <!-- Test Code Coverage -->
             <plugin>
