--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Set up JDK 13
         uses: actions/setup-java@v1
         with:
-          java-version: 13
+          java-version: '13'
       - name: Cache Maven packages
         uses: actions/cache@v1
         with:
