--- a/pom.xml
+++ b/pom.xml
@@ -241,6 +241,13 @@
             <version>2.1.1-SNAPSHOT</version>
         </dependency>
 
+        <!-- coveralls -->
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.2.3</version>
+        </dependency>
+
     </dependencies>
 
 </project>
