--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,7 @@ log.txt.5
 /data/*
 /walksOnly/*
 /src/main/java/walkGenerators/evaluation/*
+/src/test/java/walkGenerators/rdf2vecLight/TestCaseTest.java
 
 # binaries
 bin/
