--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,13 @@
         <relativePath></relativePath>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <build>
         <plugins>
             <!--
@@ -260,9 +267,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.rdfhdt</groupId>
+            <groupId>com.github.rdfhdt.hdt-java</groupId>
             <artifactId>hdt-java-core</artifactId>
-            <version>2.1.1-SNAPSHOT</version>
+            <version>v2.1</version>
         </dependency>
 
         <!-- coveralls -->
