--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,3 +30,11 @@ jobs:
         run: mvn -B package --file pom.xml
       - name: Coveralls
         run: mvn coveralls:report -DrepoToken=${{ secrets.COVERALLS }}
+      - name: Generate Documentation
+        run: mvn javadoc:javadoc
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@releases/v3
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUBTOKEN }}
+          BRANCH: gh-pages # The branch the action should deploy to.
+          FOLDER: /target/site/apidocs # The folder the action should deploy.
