--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,4 +37,4 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUBTOKEN }}
           BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: ./target/site/apidocs # The folder the action should deploy.
+          FOLDER: /home/runner/work/jRDF2Vec/jRDF2Vec/target/site/apidocs/ # The folder the action should deploy.
