--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,6 +9,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          persist-credentials: false # this is required for the deploy plugin
       - name: Set up JDK 8
         uses: actions/setup-java@v1
         with:
@@ -32,8 +34,6 @@ jobs:
         run: mvn coveralls:report -DrepoToken=${{ secrets.COVERALLS }}
       - name: Generate Documentation 📚
         run: mvn javadoc:javadoc
-      - name: Install rsync 📚
-        run: apt-get update && apt-get install -y rsync
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
