--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,10 +32,11 @@ jobs:
       - name: Generate Documentation 📚
         run: mvn javadoc:javadoc
       - name: Debug
-        run: cd home/runner/work/jRDF2Vec/jRDF2Vec/target/site/apidocs && pwd
+        run: pwd && cd /home/runner/work/jRDF2Vec/jRDF2Vec/target/site/apidocs && pwd
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUBTOKEN }}
           BRANCH: gh-pages # The branch the action should deploy to.
           FOLDER: home/runner/work/jRDF2Vec/jRDF2Vec/target/site/apidocs
+
