--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,9 +31,16 @@ jobs:
         run: mvn coveralls:report -DrepoToken=${{ secrets.COVERALLS }}
       - name: Generate Documentation 📚
         run: mvn javadoc:javadoc
-      - name: Deploy 🚀
+      - name: Deploy JavaDoc 🚀
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages # The branch the action should deploy to.
           FOLDER: target/site/apidocs
+      - name: Deploy JAR 🚀
+        uses: JamesIves/github-pages-deploy-action@releases/v3
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: jars # The branch the action should deploy to.
+          FOLDER: target/jrdf2vec-1.0-SNAPSHOT.jar
+          TARGET_FOLDER: /jars
