--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,10 +37,12 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages # The branch the action should deploy to.
           FOLDER: target/site/apidocs
+      - name: Copy JAR to special folder for deplyoment
+        run: mkdir ./jars && cp target/jrdf2vec-1.0-SNAPSHOT.jar ./jars
       - name: Deploy JAR 🚀
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: jars # The branch the action should deploy to.
-          FOLDER: target/jrdf2vec-1.0-SNAPSHOT.jar
+          FOLDER: jars
           TARGET_FOLDER: jars
