--- a/pom.xml
+++ b/pom.xml
@@ -24,32 +24,6 @@
 
     <build>
         <plugins>
-            <!--
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.1.1</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>de.uni_mannheim.informatik.dws.jrdf2vec.Main</mainClass>
-                        </manifest>
-                    </archive>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>make-assembly</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            -->
 
             <!-- Compiler -->
             <plugin>
@@ -217,21 +191,15 @@
         </dependency>
 
         <dependency>
-            <groupId>com.hermit-reasoner</groupId>
-            <artifactId>org.semanticweb.hermit</artifactId>
-            <version>1.3.8.4</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.mapdb</groupId>
-            <artifactId>mapdb</artifactId>
-            <version>3.0.8</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.semanticweb.yars</groupId>
             <artifactId>nxparser-parsers</artifactId>
-            <version>2.3.3</version>
+            <version>2.3.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>29.0-jre</version>
         </dependency>
 
         <!-- jitpack dependency -->
