--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>de.uni-mannheim.informatik.dws</groupId>
+    <groupId>de.uni-mannheim.informatik.dws.jrdf2vec</groupId>
     <artifactId>jrdf2vec</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -14,6 +14,33 @@
         <maven.compiler.target>8</maven.compiler.target>
         <relativePath></relativePath>
     </properties>
+
+    <name>jRDF2Vec</name>
+    <description>jRDF2Vec is a Java implementation of RDF2Vec. It supports multi-threaded, in-memory (or disk-access-based) walk generation and training.
+    </description>
+
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>Jan Portisch</name>
+            <email>jan@informatik.uni-mannheim.de</email>
+            <organization>University of Mannheim</organization>
+            <organizationUrl>https://www.uni-mannheim.de/dws/</organizationUrl>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git://github.com/dwslab/jRDF2Vec.git</connection>
+        <developerConnection>scm:git:git@github.com:dwslab/jRDF2Vec.git</developerConnection>
+        <url>https://github.com/dwslab/jrdf2vec</url>
+        <tag>HEAD</tag>
+    </scm>
 
     <repositories>
         <!-- Central needs to be explicitly stated as first choice (otherwise there is an issue with com.github.jsonld-java) -->
@@ -126,7 +153,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.2.0</version>
-
                 <configuration>
                     <show>private</show>
                     <nohelp>true</nohelp>
@@ -141,8 +167,77 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <!-- Release Plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>3.0.0-M1</version>
+            </plugin>
+
+            <!-- Deploy Plugin (required for releases) -->
+            <plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>3.0.0-M1</version>
+                <executions>
+                    <execution>
+                        <id>default-deploy</id>
+                        <phase>deploy</phase>
+                        <goals>
+                            <goal>deploy</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- maven source plugin (required for releases) -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.2.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
         </plugins>
     </build>
+
+    <profiles>
+        <!-- GPG Signature on release -->
+        <profile>
+            <id>release-sign-artifacts</id>
+            <activation>
+                <property>
+                    <name>performRelease</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.6</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
     <dependencies>
         <dependency>
