Mvn Release Plugin configuration

--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <version>3.0.0-M1</version>
+                <configuration>
+                    <goals>deploy</goals>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                    <arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>
+                </configuration>
             </plugin>
 
             <!-- Deploy Plugin (required for releases) -->
