--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,7 @@
                     <show>private</show>
                     <nohelp>true</nohelp>
                     <source>8</source>
+                    <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
                 </configuration>
                 <executions>
                     <execution>
