--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,12 +26,14 @@ jobs:
       - name: Install python dependencies 🐍
         run: pip install -r ./src/main/resources/requirements.txt
       - name: Build with Maven 🏗
+        env:
+          JAVA_HOME: /usr/local/openjdk-8
         run: mvn -B package --file pom.xml
       - name: Coveralls 🕵️‍
         run: mvn coveralls:report -DrepoToken=${{ secrets.COVERALLS }}
       - name: Generate Documentation 📚
         env:
-          JAVA_HOME: /usr/local/openjdk-11
+          JAVA_HOME: /usr/local/openjdk-8
         run: mvn javadoc:javadoc
       - name: Deploy JavaDoc 🚀
         uses: JamesIves/github-pages-deploy-action@releases/v3
