--- a/pom.xml
+++ b/pom.xml
@@ -368,6 +368,12 @@
             <version>2.3.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.javatuples</groupId>
+            <artifactId>javatuples</artifactId>
+            <version>1.2</version>
+        </dependency>
+
     </dependencies>
 
 </project>
