--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -76,4 +76,4 @@ jobs:
       - name: Install python dependencies
         run: pip install -r ./src/main/resources/requirements.txt
       - name: Build with Maven
-        run: mvn clean install
+        run: mvn clean install -DskipTests=True
