--- a/pom.xml
+++ b/pom.xml
@@ -293,10 +293,17 @@
     </profiles>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.apache.jena</groupId>
+            <artifactId>jena-core</artifactId>
+            <version>3.17.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.jena</groupId>
             <artifactId>jena-tdb</artifactId>
-            <version>3.13.1</version>
+            <version>3.17.0</version>
         </dependency>
 
         <!-- slf4j -->
