Type walk implementation.

--- a/pom.xml
+++ b/pom.xml
@@ -389,6 +389,12 @@
             <version>1.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>20.1.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
