--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,8 +17,8 @@ jobs:
         uses: actions/cache@v1
         with:
           path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}-2
+          #restore-keys: ${{ runner.os }}-m2
       - name: Setup Python 🐍
         uses: actions/setup-python@v1
         with:
@@ -66,8 +66,8 @@ jobs:
           path: |
             ~/.m2
             ~/.cache/pip
-          key: ${{ matrix.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ matrix.os }}-m2-
+          key: ${{ matrix.os }}-m2-${{ hashFiles('**/pom.xml') }}-2
+          #restore-keys: ${{ matrix.os }}-m2-
       - name: Setup Python
         uses: actions/setup-python@v1
         with:
