--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,6 +13,8 @@ jobs:
         with:
           java-version: 8
           java-package: jdk
+      - name: Print maven version
+        run: mvn -version
       - name: Cache Maven packages 📦
         uses: actions/cache@v1
         with:
