Provison of files for test case.

--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,4 @@ log4j.properties
 !src/test/resources/existing_walk_directory/walk_file.gz
 !src/test/resources/existing_walk_directory/walk_file.txt
 !src/test/resources/nt_directory_type_walks/*
+!src/test/resources/walk_merge/*
