--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,4 +2,4 @@ log4j.rootLogger=DEBUG, STDOUT
 log4j.logger.deng=INFO
 log4j.appender.STDOUT=org.apache.log4j.ConsoleAppender
 log4j.appender.STDOUT.layout=org.apache.log4j.PatternLayout
-log4j.appender.STDOUT.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
+log4j.appender.STDOUT.layout.ConversionPattern=%d{dd MMM yyyy HH:mm:ss} %5p [%t] (%F:%L) - %m%n
