Upgrade to python > 3.8, gensim > 4, and flask > 2.

--- a/.gitignore
+++ b/.gitignore
@@ -121,3 +121,4 @@ python_command.txt
 !src/test/resources/walk_merge/*
 src/main/resources/test/__pycache__
 src/main/resources/__pycache__
+settings.json
