--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -1,4 +1,4 @@
-name: Publish Docker image
+name: Publish Docker Image
 # To dwslab GitHub Container Registry
 # https://github.com/orgs/dwslab/packages
 on:
